--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 <body>
 	<div class = "container mt-4">
 		<h1 class = "display-4 text-center">
-			<i class="fas fa-book-open"></i>My<span class="text-primary">Book</span>List</h1>
+			<i class="fas fa-book-open"></i>My<span class="text-primary">Book</span>List</h1> // fas fa-book class for Book Icon in BootStrap
 			<form id = "book-form">
-				<div class = "form-group">
-					<label for="title">Title</label>
+				<div class = "form-group">                                   
+					<label for="title">Title</label>                         
 					<input type="text" id="title" class ="form-control">
 				</div>	
 				<div class = "form-group">
 					<label for="author">Author</label>
 					<input type="text" id="author" class ="form-control">
 				</div>
-					<div class = "form-group">
+				<div class = "form-group">
 					<label for="isbn">ISBN#</label>
 					<input type="text" id="isbn" class ="form-control">
 				</div>	
